# bill_extractor_service

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: extract.py
app/core/: config.py
app/pipelines/: extraction.py  mapper.py
app/schemas/: financial.py
app/services/: llm_service.py  ocr_service.py  parsing_service.py
app/utils/: datetime_utils.py  normalization_utils.py  note_normalizer.py
